style.css
@font-face {
  font-family: Dala;
  src: url("./fonts/DalaFloda-Medium-Cyr.otf") format("opentype");
}

@font-face {
  font-family: Dala-Italic;
  src: url("./fonts/DalaFloda-MediumItalic-Cyr.otf") format("opentype");
}

/* ========== HOMEPAGE ========== */

.background-image {
  width: 100%;
  position: fixed;
  z-index: -1;
  top: 0;
  left: 0;
}

.album-artist {
  font-size: 40px;
  margin-top: 40px;
  margin-bottom: 20px;
}

.album {
  margin: auto;
  width: fit-content;
  height: auto;
}

a {
  color: black;
}

.reverie {
  width: 85%;
  position: relative;
  background-color: grey;
  margin: auto;
  display: flex;
  justify-content: center;
}

.out-now-text {
  font-size: 25px;
  display: flex;
  justify-content: center;
  margin: auto;
}

.social-icons-container {
  display: flex;
  justify-content: center;
}

.social-icon {
  width: 40px;
  margin: 10px
}


/* ===== main styles ===== */

body {
  background-image: url(./images/background-images/background-mobile-2.jpg);
  background-repeat: no-repeat;
  background-size: 100%;
  background-attachment: fixed;
  width: 100vw;
  margin: 0;
  color: black;
  font-family: "Dala", "Amalta", "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
    "Lucida Sans", Arial, sans-serif;
  box-sizing: border-box;
  margin: 0 !important;
  padding: 0 !important;
  margin: auto;
  text-align: center;
  padding-top: 1px;
}

.italic {
  font-family: "Dala-Italic"
}


/* MOBILE */

@media (min-width: 500px) {
  body {
    background-image: url(./images/background-images/background-desktop.jpg);
    background-repeat: no-repeat;
    background-size: fill;
    background-attachment: fixed;
    background-size: cover;
  }
  .reverie {
    width: 480px;
  }

  .album-artist {
    font-size: 50px;
  }
}

